--- a/style/style.css
+++ b/style/style.css
@@ -352,6 +352,7 @@ li.list-group-item{
     text-align: center;
 }
 #diamond-btn{
+    margin-left: 15px;
     white-space: normal;
     line-height: 0em;
     padding: 0px;
