--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,15 @@ input:invalid:focus {
     border: none;
     color: #dce9eb;
 }
+#reset{
+    background-color: #212529;
+    color: white;
+    border: 1px solid #212529;
+}
+#reset:hover{
+    background-color: #2f3539;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(86, 86, 83, 0.81);
+}
 #submit{
     background-color: darkgoldenrod;
     color: black;
@@ -434,4 +443,77 @@ li.actived a{
     margin-top: 5px;
     margin-bottom: 5px;
 }
+/* PRICE ICONS */
+.price-icon{
+    width: 22px;
+    height: 22px;
+}
+/* Weaponds PIC */
+.weapond-pic{
+    width: 100px;
+    height: 100px;
+}
+/* Store Table */
+.store-table{
+    text-align: center;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+.store-table td,th{
+    padding: 2px 10px;
+    text-align: center;
+    width: 20%;
 
+}
+.store-input{
+    width: 85px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+.price-table td{
+    padding: 0px;
+    margin: 0px;
+}
+/* wAtt Table */
+.watt-table{
+    /*border: 1px solid darkgoldenrod;
+    border-radius: 5px 5px;*/
+    background-color: rgba(113, 10, 8, 0.73);
+    border-collapse: collapse;
+    border-radius: 5px 5px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
+/* wDef Table */
+.wdef-table{
+    /*border: 1px solid darkgoldenrod;
+    border-radius: 5px 5px;*/
+    background-color: rgb(0, 0, 48););
+    border-collapse: collapse;
+    border-radius: 5px 5px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
+/* wSpy Table */
+.wspy-table{
+    /*border: 1px solid darkgoldenrod;
+    border-radius: 5px 5px;*/
+    background-color: rgb(33, 5, 36););
+    border-collapse: collapse;
+    border-radius: 5px 5px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
+/* wExp Table */
+.wexp-table{
+    /*border: 1px solid darkgoldenrod;
+    border-radius: 5px 5px;*/
+    background-color: rgb(1, 40, 3););
+    border-collapse: collapse;
+    border-radius: 5px 5px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
