--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@ body {
     border-left: 2px solid #212529;
     border-right: 2px solid #212529;
     /*background-color: aliceblue;*/
+    /*background: #050505;*/
 
 }
 #botm{
@@ -552,7 +553,7 @@ li.actived a{
     border-style: hidden; /* hide standard table (collapsed) border */
     box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
 }
-/* wExp Table */
+/* train Table */
 .train-table{
     /*border: 1px solid darkgoldenrod;
     border-radius: 5px 5px;*/
@@ -561,4 +562,24 @@ li.actived a{
     border-radius: 5px 5px;
     border-style: hidden; /* hide standard table (collapsed) border */
     box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
+/* upgrade Table */
+.upgrade-table{
+    /*border: 1px solid darkgoldenrod;
+    border-radius: 5px 5px;*/
+    background-color: #402400;
+    border-collapse: collapse;
+    border-radius: 5px 5px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px darkgoldenrod; /* this draws the table border  */
+}
+
+.upgrade-btn{
+    background-color: darkgoldenrod ;
+    border: 1px solid darkgoldenrod;
+    color: #402400;
+}
+.upgrade-btn:hover{
+    background-color: #C4910B;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(184, 134, 11, 0.6);
 }
