--- a/style/style.css
+++ b/style/style.css
@@ -583,3 +583,32 @@ li.actived a{
     background-color: #C4910B;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(184, 134, 11, 0.6);
 }
+
+.att-table td,th{
+    width: auto;
+    text-align: center;
+    border-radius: 5px 5px;
+}
+.att-table{
+
+}
+.att-table th{
+    color: darkgoldenrod;
+}
+.att-table td a{
+    color : white;
+}
+.att-table td a:hover{
+    color : #f0ffa9;
+    text-decoration: none;
+}
+.att-arrow{
+      color: darkgoldenrod;
+}
+.att-arrow:hover{
+    color: #d19c0b;
+}
+.myArmy{
+    color: #5e6eb8;
+    font-weight: bold;
+}
